Increase PermGen size for test JVMs